--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "1.0.0",
   "description": "Simple chat application using JavaScript and Node.js",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -21,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/joeaoregan/chat-jor/issues"
   },
-  "homepage": "https://github.com/joeaoregan/chat-jor#readme"
+  "homepage": "https://github.com/joeaoregan/chat-jor#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
+  }
 }
